# Themefox-Manager

./: .gitignore  Cargo.toml  LICENSE  README.md  app
.github/workflows/: rust.yml  rust2.yml
Themefox-manager/: Cargo.toml
Themefox-manager/src/: build.rs  main.rs
addon/addon/: Pop up.bsdesign  error.html  index.html  manifest.json  popup.js  stylesheet.css  themefox_manager.js
addon/rust-app/: Cargo.toml
addon/rust-app/src/: lib.rs  main.rs
files/: protocol-handler.reg  themefox-manager.desktop  themefox-manager.json
src/: main.rs
