[package]
name = "themeFox-manager"
version = "0.1.0"
authors = ["The authors Name <legendofmiracles@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
clap = "2.33.0"
zip = "0.5.5"
#hyper = "0.13"
#tokio = "0.2.20"